dist/LineScript-win64-20260616/tests/cases/compile_fail/phys_bad_types.lsc
main() -> i64 do
  declare x = phys_new("0", 0.0, 0.0, 1.0, false)
  return 0
end
